--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,52 @@
 [submodule ".vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/mru.vim"]
 	path = vim/bundle/mru.vim
 	url = https://github.com/vim-scripts/mru.vim.git
+    ignore = all
 [submodule ".vim/bundle/vim-commentary"]
 	path = vim/bundle/vim-commentary
 	url = https://github.com/tpope/vim-commentary.git
+    ignore = all
 [submodule ".vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/vim-markdown"]
 	path = vim/bundle/vim-markdown
 	url = https://github.com/tpope/vim-markdown.git
+    ignore = all
 [submodule ".vim/bundle/vim-airline-themes"]
 	path = vim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/vim-gitgutter"]
 	path = vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/vim-syntastic/syntastic.git
+    ignore = all
 [submodule ".vim/bundle/gv"]
 	path = vim/bundle/gv
 	url = https://github.com/junegunn/gv.vim
+    ignore = all
 [submodule ".vim/bundle/vim-bracketed-paste"]
 	path = vim/bundle/vim-bracketed-paste
 	url = https://github.com/ConradIrwin/vim-bracketed-paste
+    ignore = all
 [submodule ".vim/bundle/gundo.vim"]
 	path = vim/bundle/gundo.vim
 	url = https://github.com/sjl/gundo.vim.git
-    ignore = dirty
+    ignore = all
 [submodule ".vim/bundle/jellybeans.vim"]
 	path = vim/bundle/jellybeans.vim
 	url = https://github.com/nanotech/jellybeans.vim
+    ignore = all
