--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "config/vim/bundle/molokai"]
 	path = config/vim/bundle/molokai
 	url = https://github.com/fatih/molokai.git
+[submodule "config/vim/bundle/vim-airline-themes"]
+	path = config/vim/bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
