Enable dbus notify for syncthing

--- a/config/syncthingtray.ini
+++ b/config/syncthingtray.ini
@@ -22,7 +22,7 @@ connections\1\syncthingUrl=https://localhost:8384
 connections\1\trafficPollInterval=5000
 connections\1\userName=
 connections\size=1
-dbusNotifications=false
+dbusNotifications=true
 frameStyle=16
 ignoreInavailabilityAfterStart=15
 notifyOnDisconnect=true
