--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ config/git/gitk
 config/less/lesskey
 config/vim/.netrwhist
 config/xfce4/terminal/accels.scm
+config/xfce4/xfconf/xfce-perchannel-xml/displays.xml
+config/xfce4/xfconf/xfce-perchannel-xml/keyboards.xml
+config/xfce4/xfconf/xfce-perchannel-xml/xfce4-session.xml
+config/xfce4/xfconf/xfce-perchannel-xml/xfce4-settings-manager.xml
