--- a/misc/lightdm-gtk-greeter.conf
+++ b/misc/lightdm-gtk-greeter.conf
@@ -1,17 +1,18 @@
 [greeter]
-background = /usr/share/backgrounds/illyria-default-lockscreen.jpg
+background = /usr/share/backgrounds/xfce/illyria-default-lockscreen-nobrand.jpg
 font-name = Cantarell Bold 12
 xft-antialias = true
 icon-theme-name = Papirus-Adapta-Nokto-Maia
 screensaver-timeout = 60
-theme-name = Adapta-Nokto-Eta-Maia
+theme-name = Adapta-Nokto-Maia
 cursor-theme-name = xcursor-breeze
 show-clock = false
 default-user-image = #avatar-default
-xft-hintstyle = hintfull
 position = 50%,center 50%,center
-clock-format = 
+clock-format = %H:%M
 panel-position = bottom
-indicators = ~host;~spacer;~clock;~spacer;~language;~session;~power
-hide-user-image = false
+indicators = ~host;~spacer;~clock;~spacer;~session;~power
+hide-user-image = true
+user-background = false
+xft-dpi = 
 
