Move to endeavouros

--- a/misc/lightdm-gtk-greeter.conf
+++ b/misc/lightdm-gtk-greeter.conf
@@ -1,18 +1,8 @@
 [greeter]
-background = /usr/share/backgrounds/desktop_wallpaper.jpg
-font-name = Cantarell Bold 12
-xft-antialias = true
-icon-theme-name = Papirus-Adapta-Nokto-Maia
-screensaver-timeout = 60
-theme-name = Adapta-Nokto-Maia
-cursor-theme-name = xcursor-breeze
-show-clock = false
-default-user-image = #avatar-default
-position = 50%,center 50%,center
-clock-format = %H:%M
-panel-position = bottom
-indicators = ~host;~spacer;~clock;~spacer;~session;~power
+indicators = ~~EndeavourOS;~spacer;~clock;~spacer;~language;~power
+theme-name = Material-Black-Mango-3.36
+icon-theme-name = Material-Black-Mango-Suru
+font-name = Noto Sans 10
 hide-user-image = true
-user-background = false
-xft-dpi = 
+background = /usr/share/backgrounds/desktop_wallpaper.jpg
 
