--- a/config/xfce4/panel/whiskermenu-1.rc
+++ b/config/xfce4/panel/whiskermenu-1.rc
@@ -1,6 +1,5 @@
-favorites=exo-terminal-emulator.desktop,exo-file-manager.desktop,exo-web-browser.desktop,exo-mail-reader.desktop,pamac-manager.desktop
+favorites=exo-terminal-emulator.desktop,exo-file-manager.desktop,exo-web-browser.desktop,xfce4-taskmanager.desktop,hardinfo.desktop
 recent=
-button-title=Applications
 button-icon=/usr/share/icons/arch_icon.svg
 button-single-row=false
 show-button-title=false
@@ -13,6 +12,7 @@ hover-switch-category=false
 category-show-name=true
 category-icon-size=1
 load-hierarchy=true
+view-as-icons=false
 recent-items-max=0
 favorites-in-recent=true
 display-recent-default=false
